# Entrenamiento-UPChiapas-2024

./: Readme.md
Practica-Modulo-10/: Readme.md
Practica-Modulo-11/: Readme.md
Practica-Modulo-11/Chakra-UI-Vite-Template/src/app/: consts.ts
Practica-Modulo-11/Chakra-UI-Vite-Template/src/components/ExampleComponents/SignlessForm/: SignlessForm.css  SignlessForm.tsx
Practica-Modulo-11/ping-contract-no-wallet/: Cargo.toml  README.md
Practica-Modulo-11/ping-contract-no-wallet/ping-no-wallet/: Cargo.toml  README.md  build.rs
Practica-Modulo-11/ping-contract-no-wallet/ping-no-wallet/io/: Cargo.toml
Practica-Modulo-11/ping-contract-no-wallet/ping-no-wallet/io/src/: lib.rs
Practica-Modulo-11/ping-contract-no-wallet/ping-no-wallet/src/: contract.rs
Practica-Modulo-4/Escrow-contract/: Cargo.toml
Practica-Modulo-5/: Readme.md
Practica-Modulo-5/GRC20-Standard-Template/: README.md
Practica-Modulo-6/: Readme.md
Practica-Modulo-7/: Readme.md
Practica-Modulo-7/gDAO-Template/: Cargo.toml  Readme.md  build.rs
Practica-Modulo-7/gDAO-Template/io/src/: lib.rs
Practica-Modulo-7/gDAO-Template/src/: ft_messages.rs  lib.rs
Practica-Modulo-8/: Readme.md
Practica-Modulo-9/: Readme.md
