[package]
name = "ping-no-wallet"
version.workspace = true
edition.workspace = true

[dependencies]
gstd.workspace = true
ping-no-wallet-io.workspace = true
gmeta.workspace = true

[dev-dependencies]
#program-state = {workspace = true, features = ["binary-vendor"]}
gtest.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
ping-no-wallet-io.workspace = true
gmeta.workspace = true

[features]
binary-vendor = []
